SFDC Automation/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActivityType__c</fullName>
        <description>Used to clone the type field value to use it in custom reporting. https://help.salesforce.com/apex/HTViewSolution?language=en_US&amp;id=000004232</description>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <description>Region of the customer branch</description>
        <inlineHelpText>Region associated to the customer branch - used to determine how calls will be handled.</inlineHelpText>
        <label>Area Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedToCurrentUser__c</fullName>
        <formula>Owner:User.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedToCurrentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Number__c</fullName>
        <formula>Mod(Value( RR_Number__c),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_24_7__c</fullName>
        <description>Identify whether contact is available 24/7 for calls.</description>
        <inlineHelpText>Determines whether contact is available 24/7 for calls.</inlineHelpText>
        <label>Available_24_7</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <description>Identifies the timeframe from which the contact is available to talk to an agent.</description>
        <inlineHelpText>Identifies the time frame from which the contact is available to talk to an agent.</inlineHelpText>
        <label>Available From</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_To__c</fullName>
        <description>Identifies the end time for which the contact is available to talk to an agent.</description>
        <inlineHelpText>Identifies the end time for which the contact is available to talk to an agent.</inlineHelpText>
        <label>Available To</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Location code, branch code to show which customer branch the task is related to</description>
        <label>Branch Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCO_Reason__c</fullName>
        <label>CCO Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSI_Customer_ID__c</fullName>
        <label>CSI Customer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attempts__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of attempts a call has been made to this customer branch this year.</description>
        <inlineHelpText>The number of attempts a call has been made to this customer branch this year.</inlineHelpText>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign  ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connection__ICCallDispositionId__c</fullName>
        <label>IC Call Disposition Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICCallDispositionOther__c</fullName>
        <label>IC Call Disposition Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICCallDisposition__c</fullName>
        <label>IC Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICCampaignId__c</fullName>
        <label>IC CampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICCommitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IC Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__ICCustomerCallDispositionId__c</fullName>
        <label>IC Customer Call Disposition Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICCustomerCallDisposition__c</fullName>
        <label>IC Customer Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICCustomerNotes__c</fullName>
        <label>IC Customer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connection__ICEndTime__c</fullName>
        <label>IC End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__ICNoteCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IC Note Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__ICRowNumber__c</fullName>
        <label>IC RowNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICSessionID__c</fullName>
        <label>IC SessionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICSessionName__c</fullName>
        <label>IC SessionName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICStartDate__c</fullName>
        <formula>DATE(
     YEAR(DATEVALUE( Connection__ICStartTime__c )),
     MONTH(DATEVALUE( Connection__ICStartTime__c )),
     DAY(DATEVALUE( Connection__ICStartTime__c ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connection__ICStartTime__c</fullName>
        <label>IC Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__ICUniqueId__c</fullName>
        <label>IC Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICWrapUpTime__c</fullName>
        <label>IC Wrap Up Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__IC_ContactDuration__c</fullName>
        <description>Total time spent with client (talk + wrap up) in minutes</description>
        <formula>(Connection__ICWrapUpTime__c - Connection__ICStartTime__c ) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time spent with client (talk + wrap up) in minutes</inlineHelpText>
        <label>IC Contact Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connection__IC_EventDescription__c</fullName>
        <label>IC Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connection__IC_EventEnd__c</fullName>
        <label>IC Event End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__IC_EventStart__c</fullName>
        <label>IC Event Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__IC_TalkDuration__c</fullName>
        <description>End - Start</description>
        <formula>(Connection__ICEndTime__c - Connection__ICStartTime__c ) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IC Talk Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connection__IC_WrapupDuration__c</fullName>
        <description>Wrap up - End</description>
        <formula>(Connection__ICWrapUpTime__c - Connection__ICEndTime__c)  * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IC Wrap-up Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connection__IC_isIntelliconnectionEvent__c</fullName>
        <description>set to true if IC event</description>
        <formula>IF((Subject  = &apos;IntelliConnection follow up call&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IC Is Intelliconnection Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByCurrentUser__c</fullName>
        <formula>CreatedBy.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByCurrentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>IF(
OR(
AND (Today() -  Original_Due_Date__c &lt; 0, ISPICKVAL(Status, &apos;Not Started&apos;),Subject = &apos;Customer Sat Survey&apos;),
AND(Today() - Original_Due_Date__c &lt; 0, NOT(ISPICKVAL(Status,&apos;Not Started&apos;)), Subject = &apos;Customer Sat Survey&apos;, DATEVALUE(LastModifiedDate) &lt;= Original_Due_Date__c)
),0, 
IF (
AND (NOT(ISPICKVAL(Status,&apos;Not Started&apos;)), Subject = &apos;Customer Sat Survey&apos;,  DATEVALUE(LastModifiedDate) &gt;Original_Due_Date__c ), 
DATEVALUE(LastModifiedDate) - Original_Due_Date__c, Today() - Original_Due_Date__c
)
)</formula>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Describe_the_customer_issue__c</fullName>
        <label>Describe the customer issue(s)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect contact/ info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke to contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>ROUND((NOW() - CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__ActivityDate__c</fullName>
        <label>Eloqua Discover Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__ActivityType__c</fullName>
        <label>Eloqua Discover Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__ActivityURL__c</fullName>
        <label>Eloqua Discover Activity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EDP1__AssetName__c</fullName>
        <label>Eloqua Discover Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__AssetType__c</fullName>
        <label>Eloqua Discover Asset Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__Asset__c</fullName>
        <label>Eloqua Discover Asset</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__Description__c</fullName>
        <label>Eloqua Discover Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EDP1__ErrorText__c</fullName>
        <label>Eloqua Discover Error Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua Discover Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua Discover Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1__OwnerId__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__ProspectId__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Prospect Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__SortKey__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Sort Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion__c</fullName>
        <label>Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_long_has_the_issue_been_going_on__c</fullName>
        <label>How long has the issue been going on?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>BDM Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder OK (800#)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Acivity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Acivity Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OnBehalfOfCurrentUser__c</fullName>
        <formula>IF( $User.ContactId != null, If(WhoId= $User.ContactId,true,false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnBehalfOfCurrentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Assigned__c</fullName>
        <description>The alias of the person that was originally assigned to the activity/task - used only for Survey Activities for Customer Satisfaction Survey.</description>
        <label>Original Assigned</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <description>Due Date originally assigned to the survey activity.   This is used because there can be no formulas or data manipulations on the Due Date field as part of the standard SFDC limitations.</description>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orignal_Task_Date__c</fullName>
        <label>Orignal Task Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RR_Number__c</fullName>
        <description>Round robin number that will be used to assign activities to the users.</description>
        <displayFormat>{0000000000}</displayFormat>
        <label>RR_Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RydeSmart_Sales_Questionnaire__c</fullName>
        <formula>IF(Subject = &apos;RydeSmart Sales Questionnaire&apos;, HYPERLINK(&apos;/apex/RSM_Sales_Questionnaire_Task_List?accId=&apos; +  WhatId+&apos;&amp;tId=&apos;+ Id    , &apos;RydeSmart Sales Questionnaire&apos; , &apos;_self&apos;), &apos;&apos;)</formula>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Issue__c</fullName>
        <label>Source of Issue</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOUNT MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSET MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREAKDOWN ANALYSIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMPAIGN REQUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPTIVE SHOP ISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNICATION RECEIVED FROM SHOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER CARE PLAN ISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER REQUESTED ANALYSIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER SPECIFIC REQUIREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER TRAINING REQUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOM REPORT REQUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVIR PROCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMERGENCY ROAD SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENGINE PARAMETER SETTINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXCESSIVE DOWNTIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY PARKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY PARTS ISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY SAFETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY SECURITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY TOOLING ISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOURS OF OPERATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFORMATION REQUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW EQUIPMENT ISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW EQUIPMENT TRAINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUTSIDE REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM CURRENCY ISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCRC DECALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCRC SPECIAL INSTRUCTIONS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyID__c</fullName>
        <description>This field is used to store the ID of the Survey due to which this Task was created.</description>
        <label>SurveyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Call_Date_Time__c</fullName>
        <description>Date/Time that the survey should either be called or called back (based on conversation with survey respondent)</description>
        <inlineHelpText>Choose the date/time the survey should take place based on a callback request.  (Note:  This is automatically set at the beginning of the day.)</inlineHelpText>
        <label>Survey Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Call_Result__c</fullName>
        <description>Choose the call result once the initial call is made.</description>
        <inlineHelpText>The call results should only be answered in the case of the status is Completed, Retry, or Deferred/Callback.</inlineHelpText>
        <label>Survey Call Result</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Hangup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Day Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal - Too Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal - Completed Survey Recently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <description>The url provides a hyperlink to the results of the survey.  The survey is stored on the ClickTools server.</description>
        <inlineHelpText>The url provides a hyperlink to the results of the completed survey.</inlineHelpText>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>Used to store the Survey Name and ID for which the follow up task is created.</description>
        <label>Survey Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out_Reason__c</fullName>
        <description>The reason is selected for a drop-down of values as to why the contact does not wish to participate in future surveys.</description>
        <inlineHelpText>Identify the reason the contact does not wish to participate in future surveys.</inlineHelpText>
        <label>Survey Opt-Out Reason</label>
        <picklist>
            <controllingField>Survey_Opt_Out__c</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lengthy Surveys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <description>Once a refusal is detected and noted on the Survey Activity, the agent must accurately identify the caller requesting an opt-out of all surveys.</description>
        <inlineHelpText>Select yes/no to identify the contact does not wish to participate in any surveys in the future.</inlineHelpText>
        <label>Survey Opt-Out</label>
        <picklist>
            <controllingField>Survey_Call_Result__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Sub_Type__c</fullName>
        <description>Identifies the type of survey that will be conducted.</description>
        <inlineHelpText>Identifies the type of survey that should be conducted.</inlineHelpText>
        <label>Survey Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAFETY-KLEEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNGottsman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Submission_Date__c</fullName>
        <description>Date/time the survey was submitted with the responses that were captured.</description>
        <inlineHelpText>Date/time the survey was submitted with the responses that were captured.</inlineHelpText>
        <label>Survey Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TSA_Initiative_Other_notes__c</fullName>
        <description>If the picklist value for the initiative is selected to be other notes need to be provided to describe the initiative</description>
        <label>TSA_Initiative_Other_notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_the_root_causes_of_the_issues__c</fullName>
        <label>What are the root causes of the issues?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_barriers_exist__c</fullName>
        <label>What barriers exist?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_didnt_that_work__c</fullName>
        <label>What did not work?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_has_been_done_to_rectify_it__c</fullName>
        <label>What has been done to rectify it?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_needs_to_be_done_to_correct_it__c</fullName>
        <label>What needs to be done to correct it?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_outcome_does_the_customer_want__c</fullName>
        <label>What outcome does the customer want?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>With_whom_has_the_customer_discussed_it__c</fullName>
        <label>With whom has the customer discussed it?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X60_Days_Status__c</fullName>
        <description>Customer perception of the status of this issue</description>
        <inlineHelpText>Customer perception of the status of this issue. Will be automatically updated by the Survey Agent after the customer is contacted at 60 days for follow up</inlineHelpText>
        <label>60 Days Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ALL_Today_s_Survey_Activities_Tasks</fullName>
        <booleanFilter>(1 OR 2) AND (3 OR 4) AND 5</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Survey_Call_Date_Time__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Area_Name__c</columns>
        <columns>Available_24_7__c</columns>
        <columns>Available_From__c</columns>
        <columns>Available_To__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Survey_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Call_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Survey</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Survey</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Customer Sat Survey</value>
        </filters>
        <label>ALL Today&apos;s Survey Activities/Tasks</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Emails</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.RECORDTYPE</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>All Emails</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_non_survey_tasks_ForAdminView</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Ryder_Task</value>
        </filters>
        <label>All non survey tasks ForAdminView</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Care360</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Care360</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/1/2013 12:00 AM</value>
        </filters>
        <label>Care360</label>
    </listViews>
</CustomObject>